--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_gravity="center">
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/close"
+        android:layout_gravity="center"
+        android:id="@+id/delete_img"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,11 +16,4 @@
         android:layout_gravity="center"
         android:src="@drawable/view"
         android:id="@+id/view_img"/>
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:src="@drawable/close"
-        android:visibility="gone"
-        android:id="@+id/delete_img"/>
 </FrameLayout>
