--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -7,6 +7,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/close"
+        android:layout_marginBottom="80dp"
         android:layout_gravity="center"
         android:id="@+id/delete_img"/>
     <ImageView
