Added some android:layout_gravity="center"

--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -29,6 +29,7 @@
         <FrameLayout
             android:id="@+id/small_frame_layout"
             android:layout_width="wrap_content"
+            android:layout_gravity="center"
             android:layout_height="wrap_content">
 
             <ImageView
