--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,9 +3,11 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
     <ru.yandex.yamblz.ui.custom.DismissableLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginLeft="100dp"
+        android:layout_marginStart="100dp"
+        android:padding="10dp"
         android:background="@android:color/holo_blue_dark">
         <TextView
             android:layout_width="match_parent"
