--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -9,38 +9,53 @@
     app:swipe_view_id="@+id/card_view"
     app:cancel_view_id="@+id/cancel_view">
 
-    <View
+    <!--<View-->
+        <!--android:id="@id/cancel_view"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_width="75dp"-->
+        <!--android:layout_height="75dp"-->
+        <!--android:background="#ff0000"-->
+        <!--android:alpha="0" />-->
+
+    <android.support.v7.widget.CardView
         android:id="@id/cancel_view"
         android:layout_gravity="center"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:background="#ff0000"
-        android:alpha="0" />
+        android:alpha="0"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="37dp"
+        app:cardElevation="0dp">
 
-    <FrameLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/cancel" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
         android:id="@id/card_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center">
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp">
 
-        <android.support.v7.widget.CardView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ScrollView
+            <TextView
+                android:id="@+id/text_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:text="@string/content"
+                android:gravity="center"
+                android:layout_margin="16dp"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/content"
-                    android:layout_margin="16dp"/>
+        </ScrollView>
 
-            </ScrollView>
-
-        </android.support.v7.widget.CardView>
-
-    </FrameLayout>
+    </android.support.v7.widget.CardView>
 
 </ru.yandex.yamblz.task.SwipeToDismissFrameLayout>
