--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -9,19 +9,11 @@
     app:swipe_view_id="@+id/card_view"
     app:cancel_view_id="@+id/cancel_view">
 
-    <!--<View-->
-        <!--android:id="@id/cancel_view"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_width="75dp"-->
-        <!--android:layout_height="75dp"-->
-        <!--android:background="#ff0000"-->
-        <!--android:alpha="0" />-->
-
     <android.support.v7.widget.CardView
         android:id="@id/cancel_view"
         android:layout_gravity="center"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
         android:alpha="0"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="37dp"
@@ -31,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            android:textColor="@color/white"/>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
