--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
              android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="120dp"
+        android:gravity="center_horizontal"
+        android:src="@drawable/smile_sad"
+        android:id="@+id/sad"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/content"
-        android:textSize="42sp"
-        android:gravity="center"
-        />
+    <ImageView
+        android:layout_width="220dp"
+        android:layout_height="180dp"
+        android:gravity="center_horizontal"
+        android:src="@drawable/smile_happy"
+        android:id="@+id/happy"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-</FrameLayout>
+
+</RelativeLayout>
