swipe without scroll

--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,12 +3,34 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/content"
-        android:textSize="42sp"
-        android:gravity="center"
-        />
+    <Button android:id="@+id/delete_button"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_width"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_button"
+            android:alpha="0.0"
+            android:text="@string/delete"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_small_14" />
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                        android:id="@+id/card_view"
+                                        android:layout_gravity="center"
+                                        android:layout_width="@dimen/card_view_width"
+                                        android:layout_height="@dimen/card_view_width">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/spacing_small_8"
+                android:text="@string/text"
+                android:textSize="@dimen/font_medium_20" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
