Separate 'dismiss' and 'scroll' actions; handle Fling

--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,17 +1,27 @@
 <ru.yandex.yamblz.ui.views.TouchFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.CardView
         android:id="@+id/dismissible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="210dp"
         android:layout_gravity="center"
-        android:background="#FFA500"
-        android:gravity="center"
-        android:padding="30dp"
-        android:text="@string/content"
-        android:textSize="42sp"/>
+        app:cardElevation="3dp">
+
+        <TextView
+            android:id="@+id/scrollable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:scrollbars="vertical"
+            android:text="@string/content"
+            android:textSize="10sp"
+            tools:ignore="SmallSp"/>
+
+    </android.support.v7.widget.CardView>
 
 </ru.yandex.yamblz.ui.views.TouchFrameLayout>
