--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,14 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="cardview_width">300dp</dimen>
+    <dimen name="cardview_height">300dp</dimen>
+    <dimen name="cardview_margin">16dp</dimen>
+    <dimen name="cardview_corner_radius">16dp</dimen>
+    <dimen name="textview_margin">16dp</dimen>
+    <dimen name="textview_text_size">20sp</dimen>
+    <dimen name="delete_btn_width">160dp</dimen>
+    <dimen name="delete_btn_height">160dp</dimen>
+    <dimen name="delete_btn_text_size">30sp</dimen>
 
 </resources>
