--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="view_size">350dp</dimen>
+    <dimen name="view_margin">16dp</dimen>
+    <dimen name="view_padding">16dp</dimen>
+    <dimen name="bottom_view_margin">50dp</dimen>
+    <dimen name="size_gradient">100dp</dimen>
+
 </resources>
