--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -7,8 +7,8 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
         android:layout_gravity="center"
         app:cardCornerRadius="10dp">
 
@@ -16,22 +16,29 @@
 
     </android.support.v7.widget.CardView>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/fl_delete"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:background="@drawable/circle"
-        android:layout_marginBottom="22dp">
+        android:layout_marginBottom="22dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/circle">
+
+        <ImageView
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:src="@android:drawable/ic_menu_delete"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Delete"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textColor="#fff"/>
 
-    </FrameLayout>
+    </LinearLayout>
 
 </FrameLayout>
