--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -16,12 +16,12 @@
         app:cardCornerRadius="50dp"
         app:cardElevation="2dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/repeat"
-            android:textColor="@color/white"/>
+            android:src="@drawable/ic_repeat"
+            tools:ignore="ContentDescription"/>
 
     </android.support.v7.widget.CardView>
 
