--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/repeat"
+        android:id="@+id/renew"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
