--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,17 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlHardcoded"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:cancel_view_id="@+id/cancel_view"
     app:swipe_view_id="@+id/card_view"
-    app:cancel_view_id="@+id/cancel_view">
+    tools:ignore="RtlHardcoded">
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0" />
 
     <android.support.v7.widget.CardView
         android:id="@id/cancel_view"
-        android:layout_gravity="center"
         android:layout_width="74dp"
         android:layout_height="74dp"
+        android:layout_gravity="center"
         android:alpha="0"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="37dp"
@@ -32,7 +37,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center"
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
 
         <ScrollView
@@ -43,9 +48,9 @@
                 android:id="@+id/text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/content"
+                android:layout_margin="16dp"
                 android:gravity="center"
-                android:layout_margin="16dp"/>
+                android:text="@string/content" />
 
         </ScrollView>
 
