--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -94,12 +94,31 @@
 
     <ImageView
         android:id="@+id/email.icon.delete"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_delete_black_48px"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginBottom="32dp"
+        android:src="@drawable/ic_clear_black"
         android:contentDescription="@string/big_remove_icon"
-        android:visibility="gone" />
+        android:alpha="100"
+        />
+
+
+    <ImageView
+        android:id="@+id/email.icon.inbox"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginBottom="32dp"
+        android:src="@drawable/ic_move_to_inbox"
+        android:contentDescription="@string/big_inbox_icon"
+        android:alpha="100"
+        />
+
 
 
     <Button
