--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -62,6 +62,7 @@
             android:layout_marginTop="72dp"
             android:lineSpacingMultiplier="1.5"
             android:maxHeight="160dp"
+            android:scrollbars="vertical"
             android:text="@string/email_text"
             android:textColor="@color/black" />
 
