--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/dismissable_view"
+        android:layout_margin="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="@color/white"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="12dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp">
+
+        <!--<ScrollView-->
+            <!--android:padding="8dp"-->
+            <!--android:fadingEdge="vertical"-->
+            <!--android:fadingEdgeLength="100dp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/placeholder" />
+
+        <!--</ScrollView>-->
+
+
+
+    </android.support.v7.widget.CardView>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/content"
-        android:textSize="42sp"
+        android:id="@+id/revealing_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:background="@drawable/red_round"
+        android:drawablePadding="16dp"
         android:gravity="center"
-        />
+        android:text="Delete"
+        android:textColor="@color/white" />
+
 
 </FrameLayout>
